general-information.scss

--- a/src/index.html
+++ b/src/index.html
@@ -91,6 +91,9 @@
     <div id="about" class="about">
         <div class="container">
             <div class="general-information">
+                <div class="general-information__img">
+                    <img class="img-fluid" src="./img/general-information.png" width="568" height="322" alt="">
+                </div>
                 <div class="general-information__body">
                     <div class="general-information__left">
                         <div class="general-information__name">Магазин постоянных распродаж (МПР)</div>
