--- a/src/index.html
+++ b/src/index.html
@@ -210,12 +210,196 @@
             </div>
             <div class="advantage__body">
                 <div class="advantage__item">
+                    <div class="advantage__img">
+                        <img src="./img/icons-sprite.svg#icon-bonus" width="31" height="36" alt="">
+                    </div>
                     <div class="advantage__name">Бонусы партнерам за развитие сети</div>
                     <ul class="advantage__list">
                         <li>дополнитльная скидка 15% на установочны заказ в малых населенных пунктах (менее 50 тыс.чел.)</li>
                         <li>6-ой премиальный МПР или автомобиль в подарок за 5 открытых МПР </li>
                     </ul>
                 </div>
+                <div class="advantage__item">
+                    <div class="advantage__img">
+                        <img src="./img/icons-sprite.svg#icon-computer" width="31" height="36" alt="">
+                    </div>
+                    <div class="advantage__name">ИТ-продукт. Специальная конфигурация на базе 1с (розница 2.3)</div>
+                    <ul class="advantage__list">
+                        <li>логика проведения переоценок</li>
+                        <li>управление остатками магазина</li>
+                        <li>контроль продаж</li>
+                        <li>автозаказ</li>
+                    </ul>
+                </div>
+                <div class="advantage__item">
+                    <div class="advantage__img">
+                        <img src="./img/icons-sprite.svg#icon-escort" width="31" height="36" alt="">
+                    </div>
+                    <div class="advantage__name">Сопровождение после открытия</div>
+                    <ul class="advantage__list">
+                       <li>консультация по вопросам деятельности магазина</li>
+                       <li>региональный тренер (аудит магазина, рекомендации, обчение)</li>
+                       <li>проверки магазинов по чек-листам</li>
+                       <li>регулярные разноплановые акции</li>
+                       <li>обучающие вебинары</li>
+                       <li>ежемесячные листовки</li>
+                       <li>услуга проведения полной инвентаризации</li>
+                    </ul>
+                </div>
+                <div class="advantage__item">
+                    <div class="advantage__img">
+                        <img src="./img/icons-sprite.svg#icon-training" width="31" height="36" alt="">
+                    </div>
+                    <div class="advantage__name">Очное обучение</div>
+                    <span>Курсы:</span>
+                    <ul class="advantage__list">
+                        <li>управляющий магазина</li>
+                        <li>Повышение квалификации</li>
+                        <li>Кладовщик</li>
+                        <li>Региональный управляющий</li>
+                    </ul>
+                </div>
+                <div class="advantage__item">
+                    <div class="advantage__img">
+                        <img src="./img/icons-sprite.svg#icon-umbrella" width="31" height="36" alt="">
+                    </div>
+                    <div class="advantage__name">Готовое решение по сезонному ассортименту</div>
+                    <ul class="advantage__list">
+                        <li>Централизованный распил сезонных групп товаров</li>
+                        <li>Калькулятор прохождения сезона</li>
+                    </ul>
+                </div>
+                <div class="advantage__item">
+                    <div class="advantage__img">
+                        <img src="./img/icons-sprite.svg#icon-cube" width="31" height="36" alt="">
+                    </div>
+                    <div class="advantage__name">Интернет магазин
+                        www.mpr-shop.ru</div>
+                </div>
+                <div class="advantage__item">
+                    <div class="advantage__img">
+                        <img src="./img/icons-sprite.svg#icon-delivery" width="44" height="36" alt="">
+                    </div>
+                    <div class="advantage__name">бесплатная доставка</div>
+                </div>
+                <div class="advantage__item">
+                    <div class="advantage__img">
+                        <img src="./img/icons-sprite.svg#icon-complaints" width="31" height="36" alt="">
+                    </div>
+                    <div class="advantage__name">Работа с рекламациями</div>
+                </div>
+                <div class="advantage__item">
+                    <div class="advantage__img">
+                        <img src="./img/icons-sprite.svg#icon-services" width="31" height="36" alt="">
+                    </div>
+                    <div class="advantage__name">профессиональные
+                        услуги по открытию магазина</div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div id="opening" class="advantage stages">
+        <div class="container">
+            <div class="advantage__header">
+                <div class="advantage__title">Этапы открытия магазина</div>
+                <div class="advantage__arrow"></div>
+            </div>
+            <div class="advantage__body">
+                <div class="advantage__item">
+                    <div class="advantage__img">
+                        01
+                    </div>
+                    <div class="advantage__name">Знакомство с проектом МПР</div>
+                    <ul class="advantage__list">
+                        <li>Посещение вводного курса</li>
+                        <li>поиск помещения для будущего магазина</li>
+                        <li>оценка помещения и конкурентно среды (требования к помещению, оценка рафика покупателей)</li>
+                        <li>расчет бюджета проекта</li>
+                        <li>заполнение инвестиционного калькулятора</li>
+                        <li>согласование локации и параметров будущего МПР</li>
+                        <li>закрепление менеджера проекта и сроков реализации</li>
+                    </ul>
+                </div>
+                <div class="advantage__item">
+                    <div class="advantage__img">
+                        02
+                    </div>
+                    <div class="advantage__name">Подготовительная работа</div>
+                    <ul class="advantage__list">
+                        <li>заключение партнёрского соглашения и договора на комплексное оказание услуг по открытию МПР</li>
+                        <li>оплата услуг по открытию магазина</li>
+                        <li>заключение договора поставки товара</li>
+                        <li>замеры периметра помещения</li>
+
+                    </ul>
+                </div>
+                <div class="advantage__item">
+                    <div class="advantage__img">
+                        03
+                    </div>
+                    <div class="advantage__name">Разработка проекта</div>
+                    <ul class="advantage__list">
+                        <li>составление сетевого графика</li>
+                        <li>прорисовка периметра и плана расстановки торгового оборудования</li>
+                        <li>зонирование магазина по товарным группам</li>
+                        <li>3D - моделирование будущего магазина</li>
+                        <li>разработка дизайна внутреннего и внешнего оформления</li>
+                        <li>составление установочного заказа и подбор товара в листовку открытия</li>
+                        <li>рекомендации по выкладке</li>
+                    </ul>
+                </div>
+                <div class="advantage__item">
+                    <div class="advantage__img">
+                        04
+                    </div>
+                    <div class="advantage__name">Подготовка к открытию МПР</div>
+                    <span>Курсы:</span>
+                    <ul class="advantage__list">
+                        <li>Ремонт</li>
+                        <li>обучение управляющего магазином и собственника бизнеса</li>
+                        <li>закупка, сборка торгового оборудования</li>
+                        <li>закупка и настройка оргтехники и ПО</li>
+                        <li>установка специальной конфигурации МПР на базе 1С Розница 2.3</li>
+                        <li>Прием и расстановка товара</li>
+                        <li>подключение магазина к web-заказу</li>
+                        <li>оплата, изготовление и монтаж внешнего и внутреннего оформления</li>
+                        <li>проверка готовности магазина по чек-листу, определение даты праздничного открытия</li>
+                        <li>техническое открытие магазина</li>
+                        <li>подготовка рекламного сопровождения магазина перед праздничным открытием</li>
+                    </ul>
+                </div>
+                <div class="advantage__item">
+                    <div class="advantage__img">
+                        05
+                    </div>
+                    <div class="advantage__name">Праздничное открытие МПР</div>
+                    <ul class="advantage__list">
+                        <li>Печать и рассылка рекламной кампании ки открытия, запуск рекламной кампании по медиа-каналам</li>
+                        <li>предоставление ростовых кукол и промо-комплекта МПР на открытие (по запросу)</li>
+                        <li>заключене договора с подрядной организацией для проведения праздника и вручения подарков (промоутера, ведущий, оформление)</li>
+                        <li>день праздничого открытия, фото и видео-фиксация мероприятия</li>
+                    </ul>
+                </div>
+                <div class="advantage__item">
+                    <div class="advantage__img">
+                        06
+                    </div>
+                    <div class="advantage__name">Сопровождение после открытия</div>
+                    <ul class="advantage__list">
+                        <li>подключение к интернет-магазину www.mpr-shop.ru</li>
+                        <li>подключение к распилам акционного товара и сетевым листовкам</li>
+                        <li>проверка магазинов сети по чек-листам</li>
+                        <li>услуги учебного центра МПР (по запросу)</li>
+                    </ul>
+                </div>
+            </div>
+            <button type="button" class="btn btn-primary">оставить заявку</button>
+
+            <div class="open-data">
+                <img src="./img/open-data-1.png" width="264" height="174" alt="">
+                <div class="open-data__title">срок открытия магазина<br> до 60 дней</div>
+                <img src="./img/open-data-2.png" width="264" height="176" alt="">
             </div>
         </div>
     </div>
