--- a/src/index.html
+++ b/src/index.html
@@ -404,6 +404,15 @@
         </div>
     </div>
 
+    <div class="store-decoration">
+        <div class="container">
+        <div class="store-decoration__title">Оформление магазина</div>
+        </div>
+        <div class="store-decoration__img">
+        <img class="img-fluid" src="./img/stoe-decoration.png" width="1440" height="720" alt="Оформление магазина">
+        </div>
+    </div>
+
     @@include('./template/_footer.html')
 </div>
 @@include('./template/_modal.html')
