--- a/src/index.html
+++ b/src/index.html
@@ -397,9 +397,9 @@
             <button type="button" class="btn btn-primary">оставить заявку</button>
 
             <div class="open-data">
-                <img src="./img/open-data-1.png" width="264" height="174" alt="">
+                <img class="img-fluid" src="./img/open-data-1.png" width="264" height="174" alt="">
                 <div class="open-data__title">срок открытия магазина<br> до 60 дней</div>
-                <img src="./img/open-data-2.png" width="264" height="176" alt="">
+                <img class="img-fluid" src="./img/open-data-2.png" width="264" height="176" alt="">
             </div>
         </div>
     </div>
@@ -409,7 +409,22 @@
         <div class="store-decoration__title">Оформление магазина</div>
         </div>
         <div class="store-decoration__img">
-        <img class="img-fluid" src="./img/stoe-decoration.png" width="1440" height="720" alt="Оформление магазина">
+        <img class="img-fluid d-mobile-none" src="./img/stoe-decoration.png" width="1440" height="720" alt="Оформление магазина">
+        <img class="img-fluid d-desktop-none" src="./img/stoe-decoration-mobile.png" width="360" height="720" alt="Оформление магазина">
+        </div>
+    </div>
+
+    <div class="uniform">
+        <div class="container">
+            <div class="uniform__header">
+                <div class="uniform__title">Униформа</div>
+            </div>
+            <div class="uniform__body">
+                    <img class="img-fluid" src="./img/uniform-1.png" width="438" height="438" alt="mpr футболка">
+                    <img class="img-fluid" src="./img/uniform-2.png" width="516" height="406" alt="mpr форма">
+                    <img class="img-fluid" src="./img/uniform-3.png" width="427" height="320" alt="mpr форма">
+                    <img class="img-fluid" src="./img/uniform-4.png" width="446" height="446" alt="mpr форма">
+            </div>
         </div>
     </div>
 
