--- a/src/index.html
+++ b/src/index.html
@@ -215,8 +215,10 @@
                     </div>
                     <div class="advantage__name">Бонусы партнерам за развитие сети</div>
                     <ul class="advantage__list">
-                        <li>дополнитльная скидка 15% на установочны заказ в малых населенных пунктах (менее 50 тыс.чел.)</li>
-                        <li>6-ой премиальный МПР или автомобиль в подарок за 5 открытых МПР </li>
+                        <li>дополнитльная скидка 15% на установочны заказ в малых населенных пунктах (менее 50
+                            тыс.чел.)
+                        </li>
+                        <li>6-ой премиальный МПР или автомобиль в подарок за 5 открытых МПР</li>
                     </ul>
                 </div>
                 <div class="advantage__item">
@@ -237,13 +239,13 @@
                     </div>
                     <div class="advantage__name">Сопровождение после открытия</div>
                     <ul class="advantage__list">
-                       <li>консультация по вопросам деятельности магазина</li>
-                       <li>региональный тренер (аудит магазина, рекомендации, обчение)</li>
-                       <li>проверки магазинов по чек-листам</li>
-                       <li>регулярные разноплановые акции</li>
-                       <li>обучающие вебинары</li>
-                       <li>ежемесячные листовки</li>
-                       <li>услуга проведения полной инвентаризации</li>
+                        <li>консультация по вопросам деятельности магазина</li>
+                        <li>региональный тренер (аудит магазина, рекомендации, обчение)</li>
+                        <li>проверки магазинов по чек-листам</li>
+                        <li>регулярные разноплановые акции</li>
+                        <li>обучающие вебинары</li>
+                        <li>ежемесячные листовки</li>
+                        <li>услуга проведения полной инвентаризации</li>
                     </ul>
                 </div>
                 <div class="advantage__item">
@@ -274,7 +276,8 @@
                         <img src="./img/icons-sprite.svg#icon-cube" width="31" height="36" alt="">
                     </div>
                     <div class="advantage__name">Интернет магазин
-                        www.mpr-shop.ru</div>
+                        www.mpr-shop.ru
+                    </div>
                 </div>
                 <div class="advantage__item">
                     <div class="advantage__img">
@@ -293,7 +296,8 @@
                         <img src="./img/icons-sprite.svg#icon-services" width="31" height="36" alt="">
                     </div>
                     <div class="advantage__name">профессиональные
-                        услуги по открытию магазина</div>
+                        услуги по открытию магазина
+                    </div>
                 </div>
             </div>
         </div>
@@ -314,7 +318,8 @@
                     <ul class="advantage__list">
                         <li>Посещение вводного курса</li>
                         <li>поиск помещения для будущего магазина</li>
-                        <li>оценка помещения и конкурентно среды (требования к помещению, оценка рафика покупателей)</li>
+                        <li>оценка помещения и конкурентно среды (требования к помещению, оценка рафика покупателей)
+                        </li>
                         <li>расчет бюджета проекта</li>
                         <li>заполнение инвестиционного калькулятора</li>
                         <li>согласование локации и параметров будущего МПР</li>
@@ -327,7 +332,9 @@
                     </div>
                     <div class="advantage__name">Подготовительная работа</div>
                     <ul class="advantage__list">
-                        <li>заключение партнёрского соглашения и договора на комплексное оказание услуг по открытию МПР</li>
+                        <li>заключение партнёрского соглашения и договора на комплексное оказание услуг по открытию
+                            МПР
+                        </li>
                         <li>оплата услуг по открытию магазина</li>
                         <li>заключение договора поставки товара</li>
                         <li>замеры периметра помещения</li>
@@ -375,9 +382,13 @@
                     </div>
                     <div class="advantage__name">Праздничное открытие МПР</div>
                     <ul class="advantage__list">
-                        <li>Печать и рассылка рекламной кампании ки открытия, запуск рекламной кампании по медиа-каналам</li>
+                        <li>Печать и рассылка рекламной кампании ки открытия, запуск рекламной кампании по
+                            медиа-каналам
+                        </li>
                         <li>предоставление ростовых кукол и промо-комплекта МПР на открытие (по запросу)</li>
-                        <li>заключене договора с подрядной организацией для проведения праздника и вручения подарков (промоутера, ведущий, оформление)</li>
+                        <li>заключене договора с подрядной организацией для проведения праздника и вручения подарков
+                            (промоутера, ведущий, оформление)
+                        </li>
                         <li>день праздничого открытия, фото и видео-фиксация мероприятия</li>
                     </ul>
                 </div>
@@ -406,11 +417,13 @@
 
     <div class="store-decoration">
         <div class="container">
-        <div class="store-decoration__title">Оформление магазина</div>
+            <div class="store-decoration__title">Оформление магазина</div>
         </div>
         <div class="store-decoration__img">
-        <img class="img-fluid d-mobile-none" src="./img/stoe-decoration.png" width="1440" height="720" alt="Оформление магазина">
-        <img class="img-fluid d-desktop-none" src="./img/stoe-decoration-mobile.png" width="360" height="720" alt="Оформление магазина">
+            <img class="img-fluid d-mobile-none" src="./img/stoe-decoration.png" width="1440" height="720"
+                 alt="Оформление магазина">
+            <img class="img-fluid d-desktop-none" src="./img/stoe-decoration-mobile.png" width="360" height="720"
+                 alt="Оформление магазина">
         </div>
     </div>
 
@@ -420,10 +433,171 @@
                 <div class="uniform__title">Униформа</div>
             </div>
             <div class="uniform__body">
-                    <img class="img-fluid" src="./img/uniform-1.png" width="438" height="438" alt="mpr футболка">
-                    <img class="img-fluid" src="./img/uniform-2.png" width="516" height="406" alt="mpr форма">
-                    <img class="img-fluid" src="./img/uniform-3.png" width="427" height="320" alt="mpr форма">
-                    <img class="img-fluid" src="./img/uniform-4.png" width="446" height="446" alt="mpr форма">
+                <img class="img-fluid" src="./img/uniform-1.png" width="438" height="438" alt="mpr футболка">
+                <img class="img-fluid" src="./img/uniform-2.png" width="516" height="406" alt="mpr форма">
+                <img class="img-fluid" src="./img/uniform-3.png" width="427" height="320" alt="mpr форма">
+                <img class="img-fluid" src="./img/uniform-4.png" width="446" height="446" alt="mpr форма">
+            </div>
+        </div>
+    </div>
+
+    <div class="parametrs">
+        <div class="container">
+        <div class="parametrs__header">
+            <div class="parametrs__title">Основные параметры магазина</div>
+        </div>
+        </div>
+        <div class="parametrs__body">
+
+            <div class="parametrs__txt">
+                <div class="container">
+                    <div class="parametrs__content">
+                        <div class="parametrs__name">Эффективная площадь</div>
+                        <ul class="parametrs__list">
+                            <li>общая 180-300 м<sup>2</sup> (от 75 стеллажей)</li>
+                            <li>Торговая 145-250 м<sup>2</sup></li>
+                            <li>складская 35-50 м<sup>2</sup></li>
+                        </ul>
+                        <ul class="parametrs__list">
+                            <li>количество ККМ 2-3 шт</li>
+                            <li>количество артикулов от 3000 ед.,</li>
+                            <li>штат 7-10 чел.</li>
+                        </ul>
+
+                        <div class="parametrs__name">Параметры наполнения</div>
+                        <ul class="parametrs__list">
+                            <li>рекомендуемая загрузка магазина перед открытием 26 500 руб./м<sup>2</sup></li>
+                            <li>торговой площади 20-25 SKU/м<sup>2</sup></li>
+                            <li>после открытия 20 000 рую/м<sup>2</sup></li>
+                        </ul>
+
+                        <div class="parametrs__name">Параметры торговли</div>
+                        <ul class="parametrs__list">
+                            <li>праздничное открытие - 1700-4000 руб/м<sup>2</sup></li>
+                            <li>после открытия: от 500 руб/ м<sup>2</sup> ориентир. Если данный параметр не достигается,
+                                есть
+                                необходимость в анализе ситуации и применении мер для исправления
+                            </li>
+                            <li>среднее количество чеков за сутки - 400 шт.</li>
+                            <li>средняя сумма чека - 300 руб.</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="parametrs__img">
+                <img class="img-fluid d-mobile-none" src="./img/parametrs.png" width="730" height="669" alt="">
+                <img class="img-fluid d-desktop-none" src="./img/parametrs-mobile.png" width="360" height="184" alt="">
+            </div>
+        </div>
+    </div>
+
+    <div class="investment">
+        <div class="container">
+            <div class="investment__header">
+                <div class="investment__title">Сумма инвестиций на один магазин</div>
+            </div>
+            <p class="text-danger"><b>Основные расходы в руб. на магазин 170 м<sup>2</sup>    торговой площади</b></p>
+            <div class="investment__body">
+                <div class="investment__item">
+                    <div class="investment__txt">
+                    <div class="investment__name">Ремонт/дополнительное освещение</div>
+                    <ul class="investment__list">
+                        <li>при необходимости</li>
+                    </ul>
+                    </div>
+                    <div class="investment__price">от 100 000</div>
+                </div>
+                <div class="investment__item">
+                    <div class="investment__txt">
+                    <div class="investment__name">Новое торговое оборудование (8200 руб/ м<sup>2</sup>    торг. площади)
+                        </div>
+                    <ul class="investment__list">
+                        <li>возможно использование подходящего б/у оборудования</li>
+                        <li>без учета доставки</li>
+                    </ul>
+                    </div>
+                    <div class="investment__price">от 1 395 000</div>
+                </div>
+                <div class="investment__item">
+                    <div class="investment__txt">
+                        <div class="investment__name">Техника: компьютерная, кассовая, 1с+лицензии, минисервер
+                        </div>
+                    </div>
+                    <div class="investment__price">от 500 000</div>
+                </div>
+                <div class="investment__item">
+                    <div class="investment__txt">
+                        <div class="investment__name">Услуги сервисной компании:
+                        </div>
+                        <ul class="investment__list">
+                            <li>прорисовка периметра магазина, план расстановки ТО, 3D-моделирование, зонирование магазина по товарным группам, разработка дизайна вывесок навигации и листовки откртия, аудио-видео ролики, формирование установочного заказа, сопровождение проекта, очное обучение управляющего (в теч. 6 мес с даты старта проекта)</li>
+                        </ul>
+                    </div>
+                    <div class="investment__price">от 180 000</div>
+                </div>
+                <div class="investment__item">
+                    <div class="investment__txt">
+                        <div class="investment__name">ИТ-настройка программных продуктов и касс</div>
+                    </div>
+                    <div class="investment__price">10 000</div>
+                </div>
+                <div class="investment__item">
+                    <div class="investment__txt">
+                        <div class="investment__name">Монтаж слаботочных сетей, интернет</div>
+                        <ul class="investment__list">
+                            <li>в зависимости от помещения</li>
+                        </ul>
+                    </div>
+                    <div class="investment__price">30 000</div>
+                </div>
+                <div class="investment__item">
+                    <div class="investment__txt">
+                        <div class="investment__name">Реклама внешняя и внутренняя</div>
+                        <ul class="investment__list">
+                            <li>Внутреннее оформление от 70 000 руб</li>
+                            <li>Световая вывеска (в зависимости от размеров) от 160 000 руб.</li>
+                            <li>Навигация (в зависимости от размеров) от 20 000 руб. </li>
+                        </ul>
+                    </div>
+                    <div class="investment__price">от 250 000</div>
+                </div>
+                <div class="investment__item">
+                    <div class="investment__txt">
+                        <div class="investment__name">Праздничное открытие на два дня</div>
+                        <ul class="investment__list">
+                            <li>маркетинговый бюджет на товары по спецценам от 145 00 руб.</li>
+                            <li>организация праздника (ведущий, игры для покупателей, сладвкая вата и пр.) от 50 000 руб.</li>
+                            <li>печать листовки праздничного открытия от 50 000 руб.</li>
+                            <li>безадресная рассылка и рапсространение листовок (промоутеры) от 20 000 руб.</li>
+                            <li> дополнительные подарки в день розыгрыша от 20 000 руб.</li>
+                            <li>оформление фотозоны (роллап, прессвол) от 10 000 руб.</li>
+                            <li> Товары к праздничной листовке от 600 000 руб.</li>
+                        </ul>
+                    </div>
+                    <div class="investment__price">от 895 000</div>
+                </div>
+                <div class="investment__item">
+                    <div class="investment__txt">
+                        <div class="investment__name">Безопасность (ворота+защитные датчики)
+                        </div>
+                    </div>
+                    <div class="investment__price">от 120 000</div>
+                </div>
+                <div class="investment__item">
+                    <div class="investment__txt">
+                        <div class="investment__name">ЗП сотрудников до технического открытия магазина</div>
+                        <ul class="investment__list">
+                            <li>персонал (чел.) УМ, ЗУМ, кладовщик, 5 продавцов-кассиров</li>
+                        </ul>
+                    </div>
+                    <div class="investment__price">от 200 000</div>
+                </div>
+                <div class="investment__item">
+                    <div class="investment__txt">
+                        <div class="investment__name"><b>Итого</b></div>
+                    </div>
+                    <div class="investment__price">от 7 590 000 рублей</div>
+                </div>
             </div>
         </div>
     </div>
