--- a/src/index.html
+++ b/src/index.html
@@ -602,6 +602,24 @@
         </div>
     </div>
 
+    <div class="number number--secondary">
+        <div class="container">
+            <div class="number__body">
+                <div class="number__item">
+                    <div class="number__text">рекомендуемая наценка </div>
+                    <div class="number__count">45%</div>
+                </div>
+                <div class="number__item">
+                    <div class="number__text">окупаемость<br> от</div>
+                    <div class="number__count">18 <span>месяцев</span></div>
+                </div>
+                <div class="number__item">
+                    <div class="number__text">ежемесячный взнос отсутствует!</div>
+                </div>
+            </div>
+        </div>
+    </div>
+
     @@include('./template/_footer.html')
 </div>
 @@include('./template/_modal.html')
