--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,8 @@
     <!-- CSS -->
 
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remodal/1.1.1/remodal.min.css" integrity="sha512-UO+dUiFTr6cCaPZKCzXEGhYsuK8DkGAS5iThyMUrtHsg+INCFyRM3GiqJ4rjuvfEyn81XGjpfmjSwwR1dAjAsw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remodal/1.1.1/remodal-default-theme.min.css" integrity="sha512-jRxwiuoe3nt8lMSnOzNEuQ7ckDrLl31dwVYFWS6jklXQ6Nzl7b05rrWF9gjSxgOow5nFerdoN6CBB4gY5m5nDw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="css/mpr-franchise.css">
 
 
@@ -33,7 +35,7 @@
                     </ul>
                     <div class="hero__row">
                         <span>Оставьте заявку на консультацию, и наш менеджер подробно расскажет об условиях партнерства</span>
-                        <button type="button" class="btn btn-primary">Оставить заявку</button>
+                        <button type="button" class="btn btn-primary" data-remodal-target="consultation">Оставить заявку</button>
                     </div>
                 </div>
                 <div class="hero__img">
@@ -196,7 +198,7 @@
                     <div class="swiper-statistic-next"></div>
                 </div>
                 <div class="text-center">
-                    <button type="button" class="btn btn-primary">оставить заявку</button>
+                    <button type="button" class="btn btn-primary" data-remodal-target="consultation">оставить заявку</button>
                 </div>
             </div>
         </div>
@@ -405,7 +407,7 @@
                     </ul>
                 </div>
             </div>
-            <button type="button" class="btn btn-primary">оставить заявку</button>
+            <button type="button" class="btn btn-primary" data-remodal-target="consultation">оставить заявку</button>
 
             <div class="open-data">
                 <img class="img-fluid" src="./img/open-data-1.png" width="264" height="174" alt="">
@@ -415,7 +417,7 @@
         </div>
     </div>
 
-    <div class="store-decoration">
+    <div id="store-decoration" class="store-decoration">
         <div class="container">
             <div class="store-decoration__title">Оформление магазина</div>
         </div>
@@ -427,7 +429,7 @@
         </div>
     </div>
 
-    <div class="uniform">
+    <div id="uniform" class="uniform">
         <div class="container">
             <div class="uniform__header">
                 <div class="uniform__title">Униформа</div>
@@ -714,7 +716,7 @@
                     </div>
                 </div>
                 <div class="swiper-reviews-next"></div>
-                <button type="button" class="btn btn-primary">оставить заявку</button>
+                <button type="button" class="btn btn-primary" data-remodal-target="consultation">оставить заявку</button>
             </div>
         </div>
     </div>
@@ -725,6 +727,7 @@
 <!-- JS -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/remodal/1.1.1/remodal.min.js" integrity="sha512-a/KwXZUMuN0N2aqT/nuvYp6mg1zKg8OfvovbIlh4ByLw+BJ4sDrJwQM/iSOd567gx+yS0pQixA4EnxBlHgrL6A==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <script src="js/mpr-franchise.js"></script>
 
 </body>
