--- a/src/learning.html
+++ b/src/learning.html
@@ -62,7 +62,7 @@
                     <li><b>15-26 марта 2021 года </b>- Курс для управляющих магазином (группа 20)</li>
                 </ul>
             </div>
-            <button type="button" class="btn btn-primary" data-remodal-target="consultation">записаться на курс</button>
+            <button type="button" class="btn btn-primary" data-remodal-target="course">записаться на курс</button>
 
             <div class="learning-page__body">
                 <p><b>Модель получения знаний&nbsp;&mdash; обучение действием.</b></p>
@@ -86,13 +86,13 @@
                 <div>
                     <p><b>Остались вопросы?</b><br>
                         Заполните форму и мы свяжемся с вами в ближайшее время</p>
-                    <button type="button" class="btn btn-primary" data-remodal-target="consultation">Задать вопрос
+                    <button type="button" class="btn btn-primary" data-remodal-target="question">Задать вопрос
                     </button>
                 </div>
                 <div>
                     <p><b>Нужен региональный менеджер?</b><br>
                         В случае возникновения вопросов, требующих обсуждения</p>
-                    <button type="button" class="btn btn-primary" data-remodal-target="consultation">Связаться с
+                    <button type="button" class="btn btn-primary" data-remodal-target="trener">Связаться с
                         менеджером
                     </button>
                 </div>
