--- a/src/index.html
+++ b/src/index.html
@@ -121,7 +121,7 @@
                 <div class="geografia__title">География МПР</div>
                 <div class="geografia__body">
                     <div class="geografia__img">
-                        <img class="img-fluid" src="./img/russia-kazakhstan.png" width="841" height="566"
+                        <img class="img-fluid" src="./img/russia-kazakhstan-v2.png" width="841" height="566"
                              alt="карта mpr Россия и Казахстан">
                     </div>
                     <div class="geografia__txt">
@@ -626,7 +626,7 @@
         </div>
     </div>
 
-    <div class="learning-main">
+    <div id="learning-main" class="learning-main">
         <div class="container">
             <div class="learning-main__header">
                 <div class="learning-main__title">Учебный центр</div>
@@ -672,7 +672,7 @@
         </div>
     </div>
 
-    <div class="reviews">
+    <div id="reviews" class="reviews">
         <div class="container">
             <div class="reviews__header">
                 <div class="reviews__title">Отзывы</div>
