--- a/src/index.html
+++ b/src/index.html
@@ -100,12 +100,9 @@
                 <div class="general-information__body">
                     <div class="general-information__left">
                         <div class="general-information__name">Магазин постоянных распродаж (МПР)</div>
-                        <p>&mdash;&nbsp;это универсальное решение, обьединяющее опыт предпринимателя единые сетевые
-                            стандарты.
-                            М&nbsp;ыстроим федеральную клиентскую сеть, в&nbsp;основе которой лежат современные
-                            технологии организации розничных продаж и&nbsp;успешные практики лидеров рынка.
-                            Все это определяет быстрый набор поплярности предлягаемого формата магазинов &laquo;товары
-                            для дома&raquo;</p>
+                        <p>&mdash;&nbsp;это универсальное решение, объединяющее опыт предпринимателя единые сетевые стандарты.
+                            Мы&nbsp;строим федеральную клиентскую сеть, в&nbsp;основе которой лежат современные технологии организации розничных продаж и&nbsp;успешные практики лидеров рынка.
+                            Все это определяет быстрый набор популярности предлагаемого формата магазинов &laquo;товары для дома&raquo;</p>
                     </div>
                     <div class="general-information__right">
                         <div class="general-information__name">Средняя площадь магазина</div>
