--- a/src/index.html
+++ b/src/index.html
@@ -401,7 +401,7 @@
                     </ul>
                 </div>
             </div>
-            <button type="button" class="btn btn-primary" data-remodal-target="consultation">оставить заявку</button>
+            <button type="button" class="btn btn-primary" data-remodal-target="consultation">Оставить заявку</button>
 
             <div class="open-data">
                 <img class="img-fluid" src="./img/open-data-1.png" width="264" height="174" alt="">
@@ -710,7 +710,7 @@
                     </div>
                 </div>
                 <div class="swiper-reviews-next"></div>
-                <button type="button" class="btn btn-primary" data-remodal-target="consultation">оставить заявку</button>
+                <button type="button" class="btn btn-primary" data-remodal-target="consultation">Оставить заявку</button>
             </div>
         </div>
     </div>
