--- a/src/index.html
+++ b/src/index.html
@@ -160,39 +160,11 @@
                                 <div class="statistic__year">2021 г.</div>
                             </div>
                         </div>
-                        <div class="swiper-slide">
-                            <div class="statistic__item">
-                                <div class="statistic__count">8</div>
-                                <div class="statistic__name">магазинов</div>
-                                <div class="statistic__year">2018 г.</div>
-                            </div>
-                        </div>
-                        <div class="swiper-slide">
-                            <div class="statistic__item">
-                                <div class="statistic__count">93</div>
-                                <div class="statistic__name">магазина</div>
-                                <div class="statistic__year">2019 г.</div>
-                            </div>
-                        </div>
-                        <div class="swiper-slide">
-                            <div class="statistic__item">
-                                <div class="statistic__count">220</div>
-                                <div class="statistic__name">магазинов</div>
-                                <div class="statistic__year">2020 г.</div>
-                            </div>
-                        </div>
-                        <div class="swiper-slide">
-                            <div class="statistic__item">
-                                <div class="statistic__count">323</div>
-                                <div class="statistic__name">магазина</div>
-                                <div class="statistic__year">2021 г.</div>
-                            </div>
-                        </div>
                     </div>
                     <div class="swiper-statistic-next"></div>
                 </div>
                 <div class="text-center">
-                    <button type="button" class="btn btn-primary" data-remodal-target="consultation">оставить заявку</button>
+                    <button type="button" class="btn btn-primary" data-remodal-target="consultation">Оставить заявку</button>
                 </div>
             </div>
         </div>
